test/asm/fragment-mismatch.err
error: Section already declared as fixed at incompatible address $0000
    at fragment-mismatch.asm(2)
FATAL: Cannot create section "test" (1 error)
    at fragment-mismatch.asm(2)
